# openMP_demo

./: CMakeLists.txt  README.md
source/: main.cpp
